# gestao-investimentos

./: .gitignore  README.md  pyproject.toml  test.db
backend/: main.py  test.db
backend/app/: config.py  database.py
backend/app/api/: aportes.py  ativos.py  auth.py  carteiras.py  contas.py  dependencies.py  eventos_corporativos.py  instituicoes.py  movimentacoes.py  posicoes.py  proventos.py  radar_dividendos.py  router.py  saldos_contas.py
backend/app/core/: config.py  dependencies.py  preco_medio.py  security.py
backend/app/models/: __init__.py  aporte.py  ativo.py  base.py  carteira.py  conta.py  cotacao.py  evento_corporativo.py  instituicao.py  movimentacao.py  posicao.py  provento.py  saldo_conta.py  usuario.py
backend/app/schemas/: aporte.py  ativo.py  ativo_service.py  carteira.py  conta.py  conta_service.py  enums.py  evento_corporativo.py  instituicao.py  movimentacao.py  posicao.py  provento.py  radar_dividendos.py  saldo_conta.py  usuario.py
backend/app/services/: aporte_service.py  ativo_service.py  carteira_service.py  conta_service.py  evento_corporativo_service.py  instituicao_service.py  (+5 more)
backend/investimentos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: env.py
backend/tests/: conftest.py  test_api_integracao_fase2.py  test_api_movimentacoes.py  test_api_proventos.py  test_api_saldos_contas.py  test_eventos_corporativos.py  test_preco_medio.py
frontend/: components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
(+66 files in other folders)
