# FILE: backend/pyproject.toml
[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "investimentos"
version = "0.1.0"
description = "Sistema local de controle de investimentos e patrimônio"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [
  { name = "Projeto Investimentos" }
]
dependencies = [
  "fastapi==0.136.3",
  "uvicorn[standard]>=0.30,<1.0",
  "sqlalchemy==2.0.50",
  "alembic==1.18.4",
  "psycopg2-binary>=2.9,<3.0",
  "pydantic==2.13.4",
  "pydantic-settings>=2.6,<3.0",
  "python-dotenv==1.2.2",
  "httpx==0.28.1",
  "apscheduler==3.11.2",
  "yfinance==1.4.1",
  "pandas>=2.2,<4.0",
  "numpy>=1.26,<3.0",
  "bcrypt>=4.0.1,<5.0.0",
  "python-jose[cryptography]>=3.3.0,<4.0",
  "email-validator>=2.1,<3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.24,<1.0",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["backend/tests"]
pythonpath = ["backend"]
addopts = "-q -ra"
asyncio_mode = "auto"
cache_dir = "backend/.pytest_cache"
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated; install `httpx2` instead."
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]